fix: Ensure full-width-on-mobile cluster always wraps
So the combination of `@noWrap={{true}} @fullWidthOnMobile={{true}}` works properly.

--- a/addon/styles/addon.css
+++ b/addon/styles/addon.css
@@ -139,6 +139,7 @@
   .layout-cluster--full-width-on-mobile {
     margin-left: 0;
     margin-right: 0;
+    flex-wrap: wrap;
   }
 
   .layout-cluster--full-width-on-mobile > .layout-cluster-item {
